--- a/src/main/resources/templates/orders/basket.html
+++ b/src/main/resources/templates/orders/basket.html
@@ -13,8 +13,6 @@
         }
     </style>
 
-    <script src="/js/bower_components/jquery/dist/jquery.js"></script>
-
     <script>
         $(function () {
             $("#deleteAll").click(function() {
@@ -56,7 +54,27 @@
                 }
             });
         }
+    </script>
 
+    <script>
+        function updateBasketlist(id, quantity){
+            var quantity = $('.product_cno').val();
+            // alert(quantity);
+            $.ajax({
+                url : '/api/basket/update',
+                method : 'put',
+                data : {"id" : id, "quantity" : quantity},
+                dataType: "text",
+                success : function (data) {
+                    // alert(id);
+                    console.log(data);
+                },
+                error : function (err) {
+                    alert("error");
+                    console.log(err.toString());
+                }
+            });
+        }
     </script>
 </th:block>
 <th:block layout:fragment="body_main">
@@ -88,10 +106,11 @@
                 </td>
                 <td style="vertical-align: middle" width="10%">
                     <div style="padding-bottom: 10px">
-                        <input type="text" class="underline" style="text-align: center" size="3" value="1">
+                        <input type="text" class="product_cno" style="text-align: center" size="3" th:value="${item.quantity}">
                     </div>
                     <div>
-                        <h5><a href="#" class="badge badge-dark" role="button" aria-pressed="true"><small>변경</small></a></h5>
+                        <h5><a href="javascript:void(0);" class="badge badge-dark" role="button" aria-pressed="true"
+                               th:onclick="'javascript:updateBasketlist(' + ${item.product.id} +','+ ${item.quantity} + ')'"><small>변경</small></a></h5>
                     </div>
                 </td>
                 <td style="vertical-align: middle" width="10%">
@@ -100,7 +119,7 @@
                     </div>
                     <div>
                         <a href="javascript:void(0);" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"
-                           th:onclick="'javascript:deleteBasketlist(' + ${item.id} + ')'" id="deleteButton" name="deleteButton"><small>삭제</small></a>
+                           th:onclick="'javascript:deleteBasketlist(' + ${item.product.id}  + ')'" id="deleteButton" name="deleteButton"><small>삭제</small></a>
 
                     </div>
                 </td>
