--- a/src/main/resources/templates/orders/basket.html
+++ b/src/main/resources/templates/orders/basket.html
@@ -76,10 +76,12 @@
 
                 dataType: "text",
                 success : function (data) {
-                    alert(data);
+                    alert(id);
                     console.log(data);
                 },
                 error : function (err) {
+                    alert("erroe"+id);
+
                     console.log(err.toString());
                 }
             });
@@ -124,8 +126,9 @@
             </thead>
             <tbody>
             <tr th:if="${not #lists.isEmpty(list)}" th:attrappend="id=${item.id}" th:each="item : ${list}">
-                <td style="vertical-align: middle"><input type="checkbox" aria-label="Checkbox for following text input" id="listId"
-                                                                                                    name="listId"></td>
+                <td style="vertical-align: middle">
+                    <input type="checkbox" aria-label="Checkbox for following text input" th:attrappend="id=${item.product.id}">
+                </td>
                 <td style="vertical-align: middle"><img class="img-thumbnail" width="100" height="100" th:src="@{${item.product.imagePath}}"></td>
                 <td style="vertical-align: middle"><h3 th:text="${item.product.name}"></h3></td>
                 <td style="vertical-align: middle">
@@ -134,6 +137,7 @@
                     <span id="cnt" th:text="${item.quantity}"></span>
                     <span> = </span>
                     <span id="totPrice" th:text="${item.product.price*item.quantity}"></span>
+                    <input type="hidden" name="productId" th:value="${item.product.id}">
                 </td>
                 <td style="vertical-align: middle" width="10%">
                     <div style="padding-bottom: 10px">
@@ -151,7 +155,6 @@
                     <div>
                         <a href="javascript:void(0);" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true"
                            th:onclick="'javascript:deleteBasketlist(' + ${item.product.id}  + ')'" id="deleteButton" name="deleteButton"><small>삭제</small></a>
-
                     </div>
                 </td>
             </tr>
